jilles      2006/10/14 13:53:31 UTC	(20061014-6681)
  Log:
  Add node_add_head() and node_add_before() to add nodes to
  a list in a place other than the tail.
  First intended use: hook priority scheme
  

  Changes:	Modified:
  +41 -0	trunk/libatheme/dlink.c (File Modified) 
  +2 -0		trunk/libatheme/dlink.h (File Modified) 


jilles      2006/10/13 19:43:11 UTC	(20061013-6679)
  Log:
  ChanServ: Make sure not to part the snoop channel if MC_INHABIT gets set on it.
  

  Changes:	Modified:
  +1 -0		trunk/modules/chanserv/main.c (File Modified) 


jilles      2006/10/12 21:06:47 UTC	(20061012-6677)
  Log:
  xmlrpc_command_success_nodata(): make sure to allocate enough memory for reply
  

  Changes:	Modified:
  +2 -2		trunk/modules/xmlrpc/main.c (File Modified) 


jilles      2006/10/06 14:22:19 UTC	(20061006-6673)
  Log:
  Fix crash.
  

  Changes:	Modified:
  +1 -1		trunk/modules/chanserv/set.c (File Modified) 


jilles      2006/10/06 00:13:15 UTC	(20061006-6669)
  Log:
  Add const char *sourcedesc field to sourceinfo_t to
  put the sourceip parameter to atheme.command.
  /os testcmd also puts a meaningful value there.
  

  Changes:	Modified:
  +4 -0		trunk/contrib/os_testcmd.c (File Modified) 
  +3 -2		trunk/contrib/perlxmlrpc.pl (File Modified) 
  +1 -0		trunk/include/sourceinfo.h (File Modified) 
  +1 -1		trunk/modules/xmlrpc/main.c (File Modified) 
  +1 -1		trunk/src/function.c (File Modified) 


jilles      2006/10/05 23:46:42 UTC	(20061005-6667)
  Log:
  perlxmlrpc.pl:
  Pass some value for the 'source ip' atheme.login parameter.
  

  Changes:	Modified:
  +1 -1		trunk/contrib/perlxmlrpc.pl (File Modified) 


jilles      2006/10/05 23:45:09 UTC	(20061005-6665)
  Log:
  Add an extra parameter to logcommand_external() for a
  source IP address or similar. Format of the log entries
  changed to contain both direct source and this new field.
  atheme.login has an optional parameter to use for this field.
  

  Changes:	Modified: