@@ -1,3 +1,15 @@
+jilles      2006/10/14 14:47:13 UTC	(20061014-6683)
+  Log:
+  Add hook_add_hook_first(), like hook_add_hook() but adds
+  the function to the head instead of the tail of the list.
+  Tracker #45
+  
+
+  Changes:	Modified:
+  +13 -0	trunk/libatheme/hook.c (File Modified) 
+  +1 -0		trunk/libatheme/hook.h (File Modified) 
+
+
 jilles      2006/10/14 13:53:31 UTC	(20061014-6681)
   Log:
   Add node_add_head() and node_add_before() to add nodes to
